# stock-brocker-assistant

./: AUTH_FLOWS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICK_START.md  README.md  debug_india_scraper.py  index.html
backend/: .env.example  .gitignore  README.md  __init__.py  main.py  mongo-compose.yaml  pyproject.toml
backend/email_service/: __init__.py  example_send.py  sender.py
backend/market_filling/: india.py  us.py
backend/models/: __init__.py  admin.py  content.py  user.py
backend/report_analysis/: parameter_generation.py  types.py
backend/routes/: __init__.py  admin_settings.py  article_scrapper.py  auth.py  editorial.py  editorial_assistant.py  financial_data.py  market_filling.py  market_summary.py  report_analysis.py  user_content.py
backend/services/: __init__.py  admin_service.py  auth_service.py  content_service.py  database.py  editorial_assistant.py  market_data.py  process_pdf.py
backend/services/broker_scrapper/: webscrapper.py
backend/services/email_service/: example_send.py
backend/services/market_filling/: __init__.py
backend/services/report_analysis/: __init__.py  constants.py  parameter_evaluator.py  parameter_generation.py  summary_generator.py
frontend/: AUTH_SYSTEM.md  bun.lockb  index.html
frontend/src/: App.tsx
frontend/src/components/: AppSidebar.tsx  Layout.tsx  ProtectedRoute.tsx
frontend/src/hooks/: useApi.ts
src/: index.css
src/components/: AppSidebar.tsx  Layout.tsx
src/pages/: AdminDashboard.tsx  BrokerReports.tsx  Dashboard.tsx  Editorial.tsx  FinancialData.tsx  MarketSummary.tsx  Settings.tsx
(+15 files in other folders)
